# deepin-deb-installer

./: CMakeLists.txt  deepin-deb-installer-lib.pro
debian/: changelog  control  copyright
src/: transaction.cpp
src/AptInstallDepend/: CMakeLists.txt
src/deb-installer/manager/: packagesmanager.cpp
src/deb-installer/model/: deblistmodel.cpp
src/deb_installer/: CMakeLists.txt  coloredprogressbar.h  debinstaller.cpp  main.cpp  multipleinstallpage.cpp  packagelistview.cpp  packagesmanager.cpp  packagesmanager.h  singleinstallpage.cpp  translate_ts2desktop.sh
src/deb_installer/manager/: packagesmanager.cpp
src/worker/: aptworker.cpp  transaction.cpp
tests/src/model/: ut_packageslistdelegate.cpp
translations/: deepin-deb-installer_en_US.ts
